--- a/webserver/templates/top.html
+++ b/webserver/templates/top.html
@@ -1,7 +1,22 @@
 {{ define "top" }}
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,700' rel='stylesheet' type='text/css'>
+	<style>
+		body {
+			font-family: 'Work Sans', sans-serif;
+		}
+		.success {
+			color: #3D9970;
+		}
+		.error {
+			color: #FF4136;
+		}
+	</style>
+</head>
 <body>
 <h1>SUP</h1>
 {{ end }}
