show num contacts

--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -7,7 +7,9 @@
 
 	<p>Last status: <span class="{{ if eq .lastStatus 200 }} success {{ else }} error {{ end }}">{{ .lastStatus }}</span></p>
 
-	<p>Last ping time: {{ .lastPingTime | }}</p>
+	<p>Last ping time: {{ .lastPingTime }}</p>
+	
+	<p>{{ .numContacts }} phone numbers on call</p>
 
 	<p><a href="/toggleEnabled">{{ if .enabled }} disable {{ else }} enable {{ end }}</a></p>
 
