disabled = stop calls, dont stop pings

--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -1,7 +1,7 @@
 {{ define "home" }}
 	{{template "top" .}}
 
-	{{ if not .enabled }} <h3 class="error">DISABLED</h3> {{ end }}
+	{{ if not .enabled }} <h3 class="error">CALLS DISABLED</h3> {{ end }}
 
 	<p>{{ .url }}</p>
 
